<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>8</version>
        <relativePath/>
    </parent>
    <groupId>com.powsybl.tutorials</groupId>
    <artifactId>powsybl-tutorials</artifactId>
    <version>1.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Powsybl tutorials</name>

    <properties>
        <maven.exec.version>1.6.0</maven.exec.version>
        <maven.javafx.version>8.8.3</maven.javafx.version>
        <javacsv.version>2.0</javacsv.version>
        <java.version>11</java.version>

        <powsybl-dependencies.version>2023.0.1</powsybl-dependencies.version>
    </properties>

    <modules>
        <module>cgmes</module>
        <module>count-network-lines</module>
        <module>csv-exporter</module>
        <module>csv-importer</module>
        <module>emf</module>
        <module>itools-packager</module>
        <module>loadflow</module>
        <module>merging-view</module>
        <module>sensitivity</module>
        <module>sld-custom-node</module>
        <module>topology</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${maven.exec.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dependencies</artifactId>
                <version>${powsybl-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
